--- a/Bulky_MVC-master/BulkyWeb/BulkyBookWeb.csproj
+++ b/Bulky_MVC-master/BulkyWeb/BulkyBookWeb.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="Stripe.net" Version="43.23.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
