--- a/bulkybook.client/package.json
+++ b/bulkybook.client/package.json
@@ -27,6 +27,7 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
+    "@mui/x-data-grid": "^7.11.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
@@ -39,7 +40,7 @@
     "react-helmet-async": "^2.0.3",
     "react-hook-form": "^7.48.2",
     "react-router": "^6.20.1",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.25.1",
     "simplebar-react": "^3.2.4",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
